--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Igor Programing Ai Image Generator</h1>
+      <h1>Igor K. Ai Image Generator</h1>
       <p>
         Wrtite your prompt to generate images with power of Ai, For example:
         "Best Quality, Masterpiece, Extremly Detailed, High Resolution,4K,Ultra
